--- a/docs/tutorial/cmake/01.md
+++ b/docs/tutorial/cmake/01.md
@@ -16,7 +16,7 @@
 > - 他能够输出各种各样的 makefile 或者 project 文件
 > - CMake 并不直接建构出最终的软件，而是产生标准的建构档（如 Unix 的 Makefile 或 Windows Visual C++ 的 projects/workspaces），然后再依一般的建构方式使用
 
-首先我们可以明确，CMake 是一个跨平台工具。简单的、狭隘的说，跨平台就是可以在 Windows、Linux 发行版乃至 MacOS 等操作系统上使用。
+首先我们可以明确，CMake 是一个<font color="red">跨平台</font>工具。简单的、狭隘的说，跨平台就是可以在 Windows、Linux 发行版乃至 MacOS 等操作系统上使用。
 
 其次，CMake 使用与 Python 性质等同的脚本语言。Python 一般在执行某个 `py` 文件的时候，会使用
 
@@ -32,7 +32,7 @@ cmake .. # .. 就表示上一级文件夹
 
 后，可以解析来自上一级文件夹中 `CMakeLists.txt` 里的内容，并将产物输出到当前文件夹。因此，CMake 解析的文件一般都是名为 `CMakeLists.txt` 的文件，当然还有其他类型的文件，在后文会详细介绍。
 
-最后，需要强调一点，CMake 并不是一个编译器，它只是一个编译工具，正如百度百科所说，CMake 不直接建构出最终的软件，CMake 主要作用就是能够使用统一的语法，在特定平台下，生成能够指导编译器完成编译工作的文件，这一文件我们称之为建构档，用于生成建构档的统一语法的文件，即`CMakeLists.txt`文件，我们称之为组态档。
+最后，需要强调一点，<u>CMake 并不是一个编译器，它只是一个编译工具</u>，正如百度百科所说，CMake 不直接建构出最终的软件，CMake 主要作用就是能够<font color="red">使用统一的语法，在特定平台下，生成能够指导编译器完成编译工作的文件</font>，这一文件我们称之为<font color="green">建构档</font>，用于生成建构档的统一语法的文件，即 `CMakeLists.txt` 文件，我们称之为<font color="green">组态档</font>。
 
 ## 2. 为什么用 CMake
 
@@ -45,7 +45,7 @@ cmake .. # .. 就表示上一级文件夹
   g++ main.cpp -o demo
   ```
   最终生成一个二进制的可执行程序 `demo`
-- 在 Windows 上，得益于 Visual Studio 强大的 IDE，我们可以直接使用在该 IDE 上集成好编译器（MSVC）完成源文件的编译，一般点击 Visual Studio 的生成解决方案，可以在项目的文件夹下生成一个 `.exe` 文件，这就是在 Windows 上最终生成的二进制可执行程序
+- 在 Windows 上，得益于 Visual Studio 强大的 IDE，我们可以直接使用在该 IDE 上集成好编译器（MSVC）完成源文件的编译，一般点击 Visual Studio 的<font color="red">生成解决方案</font>，可以在项目的文件夹下生成一个 `.exe` 文件，这就是在 Windows 上最终生成的二进制可执行程序
 
 但使用 CMake 我们可以使用统一的语句生成**建构档**。
 
@@ -65,6 +65,30 @@ cmake .. # .. 就表示上一级文件夹
 ### 3.1 安装
 
 首先安装 CMake，这里给出两种安装方式
+
+#### 3.1.1 软件源安装
+
+这种安装方式最快，但版本比较受限，在较新的 Linux 发行版上版本会新一点。这里以 Ubuntu 为例，可使用 APT 包管理工具进行安装
+
+```bash
+sudo apt install cmake cmake-qt-gui cmake-curses-gui
+```
+
+来安装 CMake 工具，在
+
+- 18.04 下，对应的版本为 `3.10`
+- 20.04 下，对应的版本为 `3.16`
+- 22.04 下，对应的版本为 `3.22`
+
+#### 3.1.2 下载二进制包
+
+可直接在 Github 中打开 [CMake Release](https://github.com/Kitware/CMake/releases)，找到你想下载的版本，点击对应的压缩包，例如在 x64 环境下的 Linux 可选择 `cmake-x.xx.x-linux-x86_64.tar.gz`，下载后进行解压，就得到了所有 CMake 工具。此外，可自行安装到系统路径下，以 `cmake-3.29.0-linux-x86_64.tar.gz` 为例，可使用以下命令
+
+```bash
+tar xf cmake-3.29.0-linux-x86_64.tar.gz # 解压
+cd cmake-3.29.0-linux-x86_64
+sudo cp -r * /usr/local                 # 安装至 /usr/local
+```
 
 ### 3.2 CMake 生成建构档的步骤
 
@@ -119,10 +143,12 @@ struct Target
 
 通过上文可以得知，目标具有依赖关系，因此目标不仅只有可执行文件这一形式，还具有别的形式，在[【05】目标构建](05.md)会详细给出目标包含的内容。
 
-总的来说，CMake 生成建构档的过程可以简单概括成
+::: tip 总结
+CMake 生成建构档的过程可以简单概括成
 
 1. 创建项目
 2. 目标构建
 3. 导出配置（如果有安装的需求，则需要做）
+:::
 
 详细的内容会在后文介绍。
