--- a/docs/tutorial/cmake/02.md
+++ b/docs/tutorial/cmake/02.md
@@ -90,7 +90,7 @@ endif()
 
 ### 2.2 *.in 文件
 
-`*.in` 模板文件一般是用于在 cmake 执行阶段将其嵌入的 CMake 变量、列表展开，并生成目标文件的过程中的。这一步通常是由 `configure_file()` 完成，会在[【06】CMake 变量参与 C/C++ 程序的编译](06.md) 中进行介绍。`*.in` 的后缀是约定俗成的，当然也可以使用其他形式的后缀。
+`*.in` 模板文件一般是用于在 cmake 执行阶段将其嵌入的 CMake 变量、列表展开，并生成目标文件的过程中的。这一步通常是由 `configure_file()` 完成，会在[【06】CMake 变量参与 C++ 程序的编译](06.md) 中进行介绍。`*.in` 的后缀是约定俗成的，当然也可以使用其他形式的后缀。
 
 OpenCV中的此类文件一般放在 `<opencv-path>/cmake/template` 文件夹下，主要是用于在执行
 
@@ -106,9 +106,8 @@ sudo make install
 
 的时候会将生成的 `OpenCVConfig.cmake` 等一系列文件安装至目标路径下，而 `OpenCVConfig.cmake` 文件的产生，就需要 `<opencv-path>/cmake/template` 文件夹下的 `OpenCVConfig.cmake.in` 文件。
 
-## 3. 总结
-
+::: tip 总结
 1. 项目的根目录以及各模块都会管理一个 `CMakeLists.txt` 文件
 2. CMake 还会解析 `*.cmake` 后缀的文件
 3. `*.in` 文件一般作为模板文件，一般在 CMake 解析期间转换为具体的文件
-
+:::
