--- a/docs/tutorial/cmake/03.md
+++ b/docs/tutorial/cmake/03.md
@@ -30,10 +30,11 @@ set(val3 aa;bb)    # val3 内容为 2 个值：aa;bb
 set(val4 aa;bb cc) # val4 内容为 3 个值：aa;bb;cc
 ```
 
-> #### 注意
-> 1. 即使 `bbb` 不加 `""` 号，也表示一个字符串，因为 CMake 的变量始终是字符串类型的，但不妨碍某些命令可以将其解释为其他类型；
-> 2. 建议变量的内容要么都使用引号 `""`，要么都不使用，例如 `val2` 的写法就不好
-> 3. 变量内容可以通过空格 ` ` 或者分号 `;` 进行分隔，也可以混用，例如 `val4`
+::: warning
+1. 即使 `bbb` 不加 `""` 号，也表示一个字符串，因为 <font color="red">CMake 的变量始终是字符串类型的</font>，但不妨碍某些命令可以将其解释为其他类型；
+2. 建议变量的内容要么都使用引号 `""`，要么都不使用，例如 `val2` 的写法就不好
+3. 变量内容可以通过空格 ` ` 或者分号 `;` 进行分隔，也可以混用，例如 `val4`
+:::
 
 ### 2.2 引用
 
@@ -115,7 +116,7 @@ set(var2 "def" PARENT_SCOPE)
 set(CMAKE_BUILD_TYPE Debug)
 ```
 
-在底层 `CMakeLists.txt` 文件中被设置，但能够在之后访问到的其他 `CMakeLists.txt` 中继续生效。
+在底层 `CMakeLists.txt` 文件中被设置，但能够在之后访问到的其他 `CMakeLists.txt` 中<font color="red">继续生效</font>。
 
 ## 4. 缓存变量
 
@@ -154,23 +155,23 @@ set(OPENCV_MODULES_BUILD "" CACHE INTERNAL "List of OpenCV modules included into
 
 - `BOOL`：`ON/OFF` 值。`cmake-gui` 会提供一个复选框；
 
-  ![20240213-003326](/cmake-03/20240213-003326.jpg)
+  ![20240213-003326](/images/cmake-03/20240213-003326.jpg)
 
 - `FILEPATH`：磁盘上文件的路径。`cmake-gui` 会提供一个文件对话框；
 
-  ![20240213-003348](/cmake-03/20240213-003348.jpg)
+  ![20240213-003348](/images/cmake-03/20240213-003348.jpg)
 
 - `PATH`：磁盘上目录的路径。`cmake-gui` 会提供一个文件对话框；
 
 - `STRING`：一行文字。`cmake-gui` 会提供文本字段，如果设置了 `STRINGS` 属性也可以提供下拉选项；
 
-  ![20240213-003339](/cmake-03/20240213-003339.jpg)
+  ![20240213-003339](/images/cmake-03/20240213-003339.jpg)
 
 - `INTERNAL`：一行文字。`cmake-gui` 会不显示该类型的变量，因此在使用此类型时意味着 `FORCE`
 
 ### 4.2 引用
 
-与普通变量的引用方式一致，即 `${xxx}`，但 `${xxx}` 会先搜索有无普通变量，若找不到才会继续搜索缓存变量。若强制指定搜索缓存变量，则需要使用 `$CACHE{xxx}`，例如
+与普通变量的引用方式一致，即 `${xxx}`，但 `${xxx}` 会<font color="red">先搜索有无普通变量，若找不到才会继续搜索缓存变量</font>。若强制指定搜索缓存变量，则需要使用 `$CACHE{xxx}`，例如
 
 ```cmake
 set(val1 "aaa")
