--- a/docs/tutorial/cmake/04.md
+++ b/docs/tutorial/cmake/04.md
@@ -169,8 +169,9 @@ endforeach()
      ```
      `${mod}` 用在了一个变量的中间，假设此时 `${mod}` 指的是 `aa`，那么这个变量则表示为：`OPENCV_MODULE_aa_DEPS`
 
-> #### 注意
-> 条件控制结束标志`endif()`和循环控制结束标志`endforeach()`括号中的内容可以不写，一旦写，就必须跟`if()`和`foreach()`括号中的内容一致
+::: warning
+条件控制结束标志`endif()`和循环控制结束标志`endforeach()`括号中的内容可以不写，一旦写，就必须跟`if()`和`foreach()`括号中的内容一致
+:::
 
 ### 3.2 其他写法
 
