--- a/docs/tutorial/cmake/06.md
+++ b/docs/tutorial/cmake/06.md
@@ -1,4 +1,4 @@
-# 【06】变量参与 C/C++ 程序的编译
+# 【06】变量参与 C++ 程序的编译
 
 ## 1. 前言
 
@@ -155,7 +155,7 @@ OCV_OPTION(OPENCV_ENABLE_NONFREE "Enable non-free algorithms" OFF)
 #cmakedefine OPENCV_ENABLE_NONFREE
 ```
 
-![1](/cmake-06/1.png)
+![1](/images/cmake-06/1.png)
 
 如果我们通过`cmake-gui`将`OPENCV_ENABLE_NONFREE`修改为`ON`，那么可以确定，会生成：
 
