--- a/docs/tutorial/cmake/07.md
+++ b/docs/tutorial/cmake/07.md
@@ -225,7 +225,7 @@ endmacro()
 
 #### 2.2.3 参数
 
-与函数一样，同样可以设置参数，也同时具备`ARGC`、`ARGV`、`ARGVx`、`ARGN`的参数，如果这些参数在宏内部进行引用，调用该宏的时候，这些内容会发生替换，例如
+与函数一样，同样可以设置参数，也同时具备`ARGC`、`ARGV`、`ARGVx`、`ARGN`的参数，如果这些参数在宏内部<font color="red">进行引用</font>，调用该宏的时候，这些内容会发生替换，例如
 
 ```cmake
 macro(my_macro xx)
@@ -261,7 +261,7 @@ my_macro(aa bb cc)
    # -- val = 666
    ```
 
-   这一点在函数就不会出现，内部设置的变量一般无法覆盖外部的变量，但如果需要覆盖，可以使用`PARENT_SCOPE`提升作用域。
+   这一点在函数就不会出现，内部设置的变量一般无法覆盖外部的变量，但如果需要覆盖，可以使用 `PARENT_SCOPE` 提升作用域。
 
 2. 宏在被调用的范围内有一个同名的变量，将使用现有变量而不是参数。
 
@@ -294,7 +294,7 @@ my_macro(aa bb cc)
    # -- m = c
    ```
 
-   这里的`ARGN`其实指代的是函数中的`ARGN`
+   这里的 `ARGN` 其实指代的是函数中的 `ARGN`
 
 ## 3. 参数解析
 
