--- a/docs/tutorial/cmake/08.md
+++ b/docs/tutorial/cmake/08.md
@@ -98,8 +98,9 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 如果按照`<PackageName>_DIR`搜索不到相应的`XXXConfig.cmake`文件的话，则会查找名为`CMAKE_PREFIX_PATH`、`CMAKE_FRAMEWORK_PATH`、`CMAKE_APPBUNDLE_PATH`的 CMake 变量或环境变量路径。这些变量指定的路径将作为查找时的根目录，**它们默认都为空**。根目录的相关内容在后文会提及。
 
-> #### 注意
-> 如果你电脑中安装了 **ROS** 并配置好之后，你在终端执行 `echo $CMAKE_PREFIX_PATH` 会发现 **ROS** 会将 `CMAKE_PREFIX_PATH` 这个变量设置为 **ROS** 中的库的路径，意思是会首先查找 **ROS** 安装的库，如果恰好你在 **ROS** 中安装了 **OpenCV **库，就会发现首先找到的是 **ROS** 中的 **OpenCV**，而不是你自己安装到系统中的 **OpenCV**。
+::: tip
+如果你电脑中安装了 **ROS** 并配置好之后，你在终端执行 `echo $CMAKE_PREFIX_PATH` 会发现 **ROS** 会将 `CMAKE_PREFIX_PATH` 这个变量设置为 **ROS** 中的库的路径，意思是会首先查找 **ROS** 安装的库，如果恰好你在 **ROS** 中安装了 **OpenCV **库，就会发现首先找到的是 **ROS** 中的 **OpenCV**，而不是你自己安装到系统中的 **OpenCV**。
+:::
 
 **PATH 环境变量路径**
 
@@ -178,8 +179,9 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 
 4. ……
 
-> #### 注意
-> 上文提及过的 `<PackageName>_DIR` 路径不是根目录路径
+::: warning
+上文提及过的 `<PackageName>_DIR` 路径不是根目录路径
+:::
 
 ## 5. FindXXX.cmake 简单写法
 
