--- a/docs/tutorial/cmake/09.md
+++ b/docs/tutorial/cmake/09.md
@@ -60,11 +60,27 @@ target_link_libraries(
 
    如果字符串为空、`0`、不区分大小写的`FALSE`、`OFF`、`N`、`NO`、`IGNORE`、`NOTFOUND`，或者区分大小写的以`-NOTFOUND`结尾的字符串，则表达式的值为`0`，否则为`1`
 
+   ```cmake
+   add_library(mylib ${SOURCES})
+
+   target_compile_definitions(mylib PUBLIC
+     $<$<BOOL:${USE_OTHERLIB}>:USE_OTHERLIB>
+   )
+   ```
+
    在这个例子中，`$<BOOL:${USE_OTHERLIB}>` 会检查变量 `USE_OTHERLIB` 是否为假。如果 `USE_OTHERLIB` 为假，那么这个表达式就会返回 `0`，否则返回 `1`。然后，`$<1:USE_OTHERLIB>` 会在前面的表达式为真时添加一个编译定义 `USE_OTHERLIB`。
 
 2. `$<AND:conditions>`：逻辑与
 
    `conditons`是以逗号分割的<font color="red">条件列表</font>，一般来说，条件是列表的，都是使用逗号进行分割，后文不再赘述。逻辑运算条件成立，表达式的值为`0`，否则为`1`，后文不再赘述。
+
+   ```cmake
+   add_library(mylib ${SOURCES})
+
+   target_compile_definitions(mylib PUBLIC
+     $<$<AND:$<CONFIG:Debug>,$<TARGET_EXISTS:otherlib>>:USE_OTHERLIB>
+   )
+   ```
 
    在这个例子中，`$<AND:$<CONFIG:Debug>,$<TARGET_EXISTS:otherlib>>`会在当前配置为`Debug`并且目标 `otherlib` 存在时返回`1`，否则返回`0`。然后，`$<1:USE_OTHERLIB>` 会在前面的表达式为真时添加一个编译定义 `USE_OTHERLIB`。
 
@@ -72,11 +88,27 @@ target_link_libraries(
 
    在给定的任何条件为真时返回`1`，否则返回`0`
 
+   ```cmake
+   add_library(mylib ${SOURCES})
+
+   target_compile_definitions(mylib PUBLIC
+     $<$<OR:$<CONFIG:Debug>,$<TARGET_EXISTS:otherlib>>:USE_OTHERLIB>
+   )
+   ```
+
    在这个例子中，`$<OR:$<CONFIG:Debug>,$<TARGET_EXISTS:otherlib>>`会在当前配置为 Debug 或者目标 `otherlib` 存在时返回 1，否则返回 0。然后，`$<1:USE_OTHERLIB>` 会在前面的表达式为真时添加一个编译定义 `USE_OTHERLIB`。
 
 4. `$<NOT:condition>`：逻辑非
 
    在给定的条件为假时返回`1`，否则返回`0`
+
+   ```cmake
+   add_library(mylib ${SOURCES})
+   
+   target_compile_definitions(mylib PUBLIC
+     $<$<NOT:$<TARGET_EXISTS:otherlib>>:USE_OTHERLIB>
+   )
+   ```
 
    在这个例子中，`$<NOT:$<TARGET_EXISTS:otherlib>>`会在目标`otherlib`不存在时返回`1`，否则返回`0`。然后，`$<1:USE_OTHERLIB>` 会在前面的表达式为真时添加一个编译定义 `USE_OTHERLIB`。
 
@@ -94,8 +126,9 @@ target_link_libraries(
 
    判断`string`是否包含在`list`中，`list`使用分号分割
 
-> #### 注意事项
-> 这里的`list`是在逗号后面的列表，即`${...}`所表示的内容，因此其内容需要使用分号分割。
+::: warning
+这里的`list`是在逗号后面的列表，即`${...}`所表示的内容，因此其内容需要使用分号分割。
+:::
 
 #### 2.1.3 变量查询
 
@@ -123,7 +156,7 @@ target_link_libraries(
 include_directories("/usr/include/$<CXX_COMPILER_ID>/")
 ```
 
-根据编译器的类型，`$<CXX_COMPILER_ID>`会被替换成对应的ID（比如“GNU”、“Clang”）。 &#x20;
+根据编译器的类型，`$<CXX_COMPILER_ID>`会被替换成对应的ID（比如“GNU”、“Clang”）。
 
 #### 2.2.1 条件表达式
 
