--- a/docs/tutorial/cmake/01.md
+++ b/docs/tutorial/cmake/01.md
@@ -60,11 +60,11 @@ cmake .. # .. 就表示上一级文件夹
 但使用 CMake 我们可以使用统一的语句生成**建构档**。
 
 - 在 Ubuntu 上，生成能够被 Unix makefile 解析的 `Makefile` 文件，这一文件可以指导 gcc/g++ 编译器完成构建（编译）工作，`Makefile` 文件就是建构档。
-- 在 Windows 上，生成能够被 Visual Studio 解析的 `*.sln` 解决方案文件，这一文件可以指导 MSVC 编译器完成构建（编译）工作，`*.sln` 文件就是建构档。
+- 在 Windows 上，生成能够被 Visual Studio MSBuild 解析的 `*.sln` 解决方案文件，这一文件可以指导 MSVC 编译器完成构建（编译）工作，`*.sln` 文件就是建构档。
 
 ### 2.2 功能强大
 
-迄今为止，CMake 已经发布了 `3.28` 系列的版本，后续的介绍均以 `3.16` 为最小版本。通过 CMake 可以在生成**建构档**之前实现
+迄今为止，CMake `3.x` 系列已经发布了超过 30 个版本，截至 `2024/11/29` 的最新版本是 `3.31.1`，后续的介绍均以 `3.16` 为最小版本。通过 CMake 可以在生成**建构档**之前实现
 
 - 第三方依赖库的下载、包含
 - 文件解析、生成
@@ -78,13 +78,13 @@ cmake .. # .. 就表示上一级文件夹
 
 #### 3.1.1 软件源安装
 
-这种安装方式最快，但版本比较受限，在较新的 Linux 发行版上版本会新一点。这里以 Ubuntu 为例，可使用 APT 包管理工具进行安装
+这种安装方式最快，但版本比较受限，在较新的 Linux 发行版上版本会新一点。这里以 Debian 系发行版为例，可使用 APT 包管理工具进行安装
 
 ```bash
 sudo apt install cmake cmake-qt-gui cmake-curses-gui
 ```
 
-来安装 CMake 工具，在
+来安装 CMake 工具，例如，在 Ubuntu
 
 - 18.04 下，对应的版本为 `3.10`
 - 20.04 下，对应的版本为 `3.16`
@@ -99,6 +99,10 @@ tar xf cmake-3.29.0-linux-x86_64.tar.gz # 解压
 cd cmake-3.29.0-linux-x86_64
 sudo cp -r * /usr/local                 # 安装至 /usr/local
 ```
+
+::: tip
+Windows 用户可在 [CMake 官网](https://cmake.org/download) 下载对应的 `*.msi` 安装包，安装完成后，就可以在命令行中使用 `cmake` 命令了。
+:::
 
 ### 3.2 CMake 生成建构档的步骤
 
