--- a/docs/tutorial/cmake/06.md
+++ b/docs/tutorial/cmake/06.md
@@ -26,12 +26,18 @@ class ABC
 #endif // HAVE_ABC
 ```
 
-这种需要手动修改源码，操作上不安全且比较繁琐。如果能在 CMake 程序的解析期间能够产生
+这种需要手动修改源码，操作上不安全且比较繁琐。如果能在程序编译期间产生
 
 - 某些预编译宏
 - 包含宏、常量表达式等内容的头文件
 
-将在安全性、操作的便捷性上会有显著提升。
+将在安全性、操作的便捷性上会有显著提升。编译器提供了一些指令，可以在编译期间产生预编译宏，例如 GCC 的 `-D` 选项：
+
+```shell
+g++ -DXXX main.cpp
+```
+
+这样就可以在编译期间产生一个预编译宏 `XXX`，CMake 则提供了一组功能，可以在 CMake 配置期间产生预编译宏，这样就可以在编译期间产生预编译宏
 
 ## 2. 使用模板文件生成头文件
 
@@ -271,9 +277,10 @@ project: CMakeLists
 
 ### 3.2 target_compile_definitions
 
-相比于 `add_definitions`，`target_compile_definitions` 更具有针对性，它能明确的指定是哪个目标在构建的时候引入预编译宏。下面首先给出 OpenCV 中的例子
+在 [【05】目标构建 - 普通库目标构建](05.md#_2-2-普通库目标构建)中提到了 `target_compile_definitions` 命令，这也是目标属性当中 “使用要求” 的一部分。在添加预定义宏的功能上，相比于 `add_definitions`，`target_compile_definitions` 则更具有针对性，它能明确的指定是哪个目标在构建的时候引入预编译宏。下面首先给出 OpenCV 中的例子
 
 ```cmake
+# 定义于 <opencv-path>/cmake/OpenCVModule.cmake 中 _ocv_create_module 宏中
 target_compile_definitions(${the_module} PRIVATE CVAPI_EXPORTS)
 ```
 
