--- a/docs/tutorial/cmake/07.md
+++ b/docs/tutorial/cmake/07.md
@@ -140,7 +140,7 @@ mY_fUnC() # 有些逆天，但也可以
 
 除此之外，一个函数还打开一个新的作用域，这点与C/C++一致。同样，使用`set(xxx PARENT_SCOPE)`可以提升变量作用域。
 
-CMake 3.18 起，也可以使用`cmake_language(CALL ...)`子命令来调用函数：
+CMake 3.18 起，也可以使用`cmake_language(CALL ...)`子命令来调用函数，可以参考[官方手册](https://cmake.org/cmake/help/latest/command/cmake_language.html#calling-commands)：
 
 ```cmake
 function(my_foo x1 x2)
