--- a/docs/tutorial/cmake/08.md
+++ b/docs/tutorial/cmake/08.md
@@ -35,6 +35,9 @@ target_link_libraries(
 foreach(m ${OpenCV_LIBS})
   message(STATUS ${m})
 endforeach()
+
+# 输出结果
+# opencv_core;opencv_imgproc;opencv_highgui;opencv_imgcodecs; ...
 ```
 
 那么CMake是如何通过 `find_package` 命令找到OpenCV并且完成配置的呢?
@@ -65,7 +68,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 这里对上述提及到的参数做个简单的解释：
 
 |   参数名称   | 可选性 |                              名称                              |         备注         |
-| :----------: | :----: | -------------------------------------------------------------- | :------------------: |
+| :----------: | :----: | -------------------------------------------------------------- | :------------------- |
 |  `package`   |  必填  | 需要查找的包名                                                 |      注意大小写      |
 |  `VERSION`   |  可选  | 指定版本，如果指定就必须检查找到的<br>包的版本是否和`VERSION`兼容  |                      |
 |   `EXACT`    |  可选  | 如果指定该参数，则表示需要寻找必须<br>完全匹配的版本而不是兼容版本 |   配合`VERSION`使用  |
