--- a/docs/tutorial/cmake/09.md
+++ b/docs/tutorial/cmake/09.md
@@ -14,7 +14,7 @@
 
 ### 1.1 CMake 工作流程
 
-CMake 工作流程分为两步，<font color="red">配置阶段</font>和<font color="red">生成阶段</font>。我们在命令行中输入`cmake ..`的时候，可以在输出内容的最后看到这样的两行话
+CMake 工作流程分为两步，==配置阶段==和==生成阶段==。我们在命令行中输入`cmake ..`的时候，可以在输出内容的最后看到这样的两行话
 
 ```txt
 -- Configuring done
@@ -48,7 +48,7 @@ target_link_libraries(
 )
 ```
 
-这两个命令均生效于<font color="red">生成阶段</font>。而后文准备介绍的生成器表达式，就作用于生成阶段。也正因如此，只有能够在生成阶段生效的命令才能使用生成器表达式，而在配置阶段生效的命令，例如用于设置变量的 `set` 命令并不支持生成器表达式。
+这两个命令均生效于==生成阶段==。而后文准备介绍的生成器表达式，就作用于生成阶段。也正因如此，只有能够在生成阶段生效的命令才能使用生成器表达式，而在配置阶段生效的命令，例如用于设置变量的 `set` 命令并不支持生成器表达式。
 
 ### 1.2 CMake 的生成器表达式是什么
 
@@ -58,7 +58,21 @@ target_link_libraries(
 
 在设置某些编译选项的时候，如果当条件较多，要制作的编译选项版本也相应增多。这时可以使用生成器表达式语法，让一部分编译信息在生成阶段自动完成，无需在配置阶段设置，示例如下：
 
-这里的`add_compile_options`就属于在生成阶段生效的命令。以上代码属于<font color="red">条件定义</font>，即在不同的条件下生成不同的变量、宏等内容。其中这段代码使用生成器表达式的效果是，在不同的构建类型下（Debug、Release），会生成不同的被添加进编译选项的字符串。
+```cmake
+# 现计划给 Debug 和 Release 两种构建类型添加不同的编译选项
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+
+# 使用生成器表达式可以简化成
+add_compile_options(
+  $<$<CONFIG:Debug>:-g -O0>
+  $<$<CONFIG:Release>:-O2>
+)
+```
+
+这里的 `add_compile_options` 就属于在生成阶段生效的命令。以上代码属于==条件定义==，即在不同的条件下生成不同的变量、宏等内容。其中这段代码使用生成器表达式的效果是，在不同的构建类型下（Debug、Release），会生成不同的被添加进编译选项的字符串。
 
 ## 2. 常用生成器表达式
 
@@ -82,7 +96,7 @@ target_link_libraries(
 
 2. `$<AND:conditions>`：逻辑与
 
-   `conditons`是以逗号分割的<font color="red">条件列表</font>，一般来说，条件是列表的，都是使用逗号进行分割，后文不再赘述。逻辑运算条件成立，表达式的值为`0`，否则为`1`，后文不再赘述。
+   `conditons`是以逗号分割的==条件列表==，一般来说，条件是列表的，都是使用逗号进行分割，后文不再赘述。逻辑运算条件成立，表达式的值为`0`，否则为`1`，后文不再赘述。
 
    ```cmake
    add_library(mylib ${SOURCES})
@@ -204,7 +218,7 @@ include_directories("/usr/include/$<CXX_COMPILER_ID>/")
 
 ## 3. 构建安装表达式
 
-该生成器表达书属于[字符串生成器表达式](#_2-2-字符串生成器表达式)的一种。这个问题来自于[【10】项目的导出与安装](10.md)，但不看并不影响知识点的讲解，下面给出这个问题的产生原因。
+该生成器表达式属于[字符串生成器表达式](#_2-2-字符串生成器表达式)的一种。这个问题来自于[【10】项目的导出与安装](10.md)，但不看并不影响知识点的讲解，下面给出这个问题的产生原因。
 
 ### 3.1 问题引出
 
@@ -242,7 +256,7 @@ target_include_directories(
 )
 ```
 
-这个命令表示，将一系列内容以公开传播方式包含于目标 `my_target` 中，这里的一系列内容则是会根据当前处于何种方式（<font color="red">构建</font>或是<font color="red">安装</font>）进行选择。`BUILD_INTERFACE` 表示在构建时启用，`INSTALL_INTERFACE` 表示在安装时启用。
+这个命令表示，将一系列内容以公开传播方式包含于目标 `my_target` 中，这里的一系列内容则是会根据当前处于何种方式（==构建==或是==安装==）进行选择。`BUILD_INTERFACE` 表示在构建时启用，`INSTALL_INTERFACE` 表示在安装时启用。
 
 假设导出目标名为 `MyModules`，可以在安装路径 `<path-to-install>/cmake/MyModules.cmake` 下找到如下类似的语句
 
@@ -252,7 +266,7 @@ set_target_properties(my_target PROPERTIES
 )
 ```
 
-这是`INSTALL_INTERFACE`生成器表达式生效的产物。
+这是 `INSTALL_INTERFACE` 生成器表达式生效的产物。
 
 ::: tip 补充说明
 这里对上文出现的三个标识符做个简短的介绍
