--- a/docs/tutorial/cmake/10.md
+++ b/docs/tutorial/cmake/10.md
@@ -25,7 +25,7 @@
 我们可以执行
 
 ```bash
-make install
+cmake --install .
 ```
 
 命令，完成实际的安装操作。
@@ -55,7 +55,7 @@ install(FILES "opencv2/opencv.hpp"
     COMPONENT dev)
 ```
 
-这句命令添加了将单一文件 `opencv2/opencv.hpp` 安装到指定目录的安装规则，默认情况下是 `/usr/local/include/opencv4/opencv2` 中，并归类到 `dev` 组件的安装规则中，在执行 `sudo make install` 命令的时候会执行该安装操作。
+这句命令添加了将单一文件 `opencv2/opencv.hpp` 安装到指定目录的安装规则，默认情况下是 `/usr/local/include/opencv4/opencv2` 中，并归类到 `dev` 组件的安装规则中，在执行 `cmake --install .` 命令的时候会执行该安装操作。
 
 其余可选内容如 `RENAME` 用法与上文给出的例子类似。
 
@@ -75,7 +75,7 @@ install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html
 )
 ```
 
-这句命令将当前二进制生成目录中的 `doxygen/html` 文件夹安装到 `${OPENCV_DOC_INSTALL_PATH}` 中，并归类到 `docs` 中，`OPTIONAL` 说明了即使这个目录不存在，也不会抛出安装的错误。同样，需要在终端执行 `make install` 命令以完成安装。
+这句命令将当前二进制生成目录中的 `doxygen/html` 文件夹安装到 `${OPENCV_DOC_INSTALL_PATH}` 中，并归类到 `docs` 中，`OPTIONAL` 说明了即使这个目录不存在，也不会抛出安装的错误。同样，需要在终端执行 `cmake --install .` 命令以完成安装。
 
 ### 2.3 目标安装
 
@@ -198,9 +198,9 @@ install(
    )
    ```
 
-   可能有读者会注意到，这里并没有为导入目标设置 `IMPORTED_LOCATION` 属性。没错，所以说这里是<font color="red">初步</font>设置属性。
+   可能有读者会注意到，这里并没有为导入目标设置 `IMPORTED_LOCATION` 属性。没错，所以说这里是==初步==设置属性。
 
-4. 包含 `OpenCVModules-<config>.cmake` 文件，在此文件中<font color="red">进一步</font>设置属性。如果该项目是
+4. 包含 `OpenCVModules-<config>.cmake` 文件，在此文件中==进一步==设置属性。如果该项目是
 
    - Release 模式编译的，那么会包含 `OpenCVModules-release.cmake` 文件
    - Debug 模式编译的，那么会包含 `OpenCVModules-debug.cmake` 文件
@@ -274,7 +274,7 @@ install(
 )
 ```
 
-运行 `make install` 后可以在安装路径 `<path-to-install>/cmake/MyLibrary/MyModules.cmake` 下找到如下类似的语句
+运行 `cmake --install .` 后可以在安装路径 `<path-to-install>/cmake/MyLibrary/MyModules.cmake` 下找到如下类似的语句
 
 ```cmake
 # Create imported target aa
@@ -417,9 +417,9 @@ include(${CMAKE_CURRENT_LIST_DIR}/MyModules.cmake)
 - 添加常规目标的安装规则，并指定导出目标
 - 添加导出目标的安装规则
 - 编写 `XxxConfig.cmake` 文件，并添加安装规则
-- 编译项目，执行安装步骤，例如 `make install`
+- 编译项目，执行安装步骤，例如 `cmake --install .`
 
-## 思考:thinking:
+## 思考 :thinking:
 
 1. 导入目标和导出目标有什么不同？使用场景是什么？
 2. 使用以下命令安装接口库，会有什么效果？
@@ -431,3 +431,6 @@ include(${CMAKE_CURRENT_LIST_DIR}/MyModules.cmake)
      RUNTIME DESTINATION bin
    )
    ```
+
+**答案** [【点此查看】](10/answer.md)
+
