--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -2,15 +2,18 @@
 
 #### 教学视频
 
-::: warning
-暂无视频
+::: tip 即将到来 ... :tada:
+- 【11】CMake：实战篇——常规复杂项目
+- 【11-2】CMake：实战篇——依赖管理
+- 【11-3】CMake：实战篇——交叉编译
+- 【11-4】CMake：实战篇——跨平台
 :::
 
 ---
 
 ## 1. 常规非跨平台项目
 
-现计划开发一个视觉处理库 `visionlib` 及示例程序 `vl_demo`，库在从源码编译安装的过程中需要实现以下功能：
+现计划开发一个专为 Linux 平台设计的视觉处理库 `visionlib` 及示例程序 `vl_demo`，库在从源码编译安装的过程中需要实现以下功能：
 
 ### 1.1 预期目标
 
@@ -26,15 +29,14 @@
    - `vl_d -> vl_demo`
    - `opencv_highgui -> vl_demo`
 7. 项目的安装目录为 `/usr/local`，其中
-   - 库文件安装到 `/usr/local/lib`
-   - 头文件安装到 `/usr/local/include`
    - 示例程序安装到 `/usr/local/bin`
+   - 头文件安装到 `/usr/local/include`
+   - 库文件安装到 `/usr/local/lib`
+   - CMake 相关配置文件安装到 `/usr/local/lib/cmake/VisionLib`
 
-### 1.2 要求
+### 1.2 要求与文件结构
 
-1. 该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `a` 对应的目标是 `vl_a`
-
-该项目的文件结构如下
+该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `a` 对应的目标是 `vl_a`，该项目的文件结构如下
 
 ``` :collapsed-lines
 .
@@ -85,6 +87,7 @@
 在项目中添加
 
 - `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
+- `cmake/VisionLibInstall.cmake` —— 项目的安装路径配置文件
 - `cmake/VisionLibModule.cmake` —— 项目的 CMake 函数库，主要涉及到目标的便捷创建
 - `modules/CMakeLists.txt` —— 项目的模块列表
 - `modules/A/CMakeLists.txt` —— 模块 A 的 CMake 配置文件
@@ -113,8 +116,8 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(OpenCV 4 REQUIRED)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
-include(cmake/VisionLibModule.cmake)
 include(cmake/VisionLibInstall.cmake)
+include(cmake/VisionLibModule.cmake)
 
 # ----------------------------------------------------------------------------
 #   将子目录添加到构建系统中
@@ -128,8 +131,35 @@ add_subdirectory(samples)
 install(
   EXPORT VisionLibTargets
   FILE VisionLibTargets.cmake
-  DESTINATION lib/cmake/VisionLib
+  DESTINATION ${VL_CFG_INSTALL_PATH}
+  # VL_CFG_INSTALL_PATH 定义于 VisionLibInstall.cmake 中
 )
+
+file(RELATIVE_PATH VL_INSTALL_RELATIVE_PATH 
+  "${CMAKE_INSTALL_PREFIX}/${VL_CFG_INSTALL_PATH}/" ${CMAKE_INSTALL_PREFIX})
+
+configure_file(
+  cmake/VisionLibConfig.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/VisionLibConfig.cmake"
+  @ONLY
+)
+
+install(
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/VisionLibConfig.cmake"
+  DESTINATION ${VL_CFG_INSTALL_PATH}
+)
+```
+
+@tab VisionLibInstall.cmake
+
+```cmake
+# 安装路径相关配置
+
+set(CMAKE_INSTALL_PREFIX "/usr/local")
+set(VL_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
+set(VL_INC_INSTALL_PATH "include/VisionLib")
+set(VL_LIB_INSTALL_PATH "lib")
+set(VL_CFG_INSTALL_PATH "${VL_LIB_INSTALL_PATH}/cmake/VisionLib")
 ```
 
 @tab VisionLibModule.cmake
@@ -193,7 +223,8 @@ macro(vl_add_module _name)
     # 添加头文件搜索路径，可参考【09】生成器表达式
     target_include_directories(${module_name} PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-      $<INSTALL_INTERFACE:include/VisionLib>
+      $<INSTALL_INTERFACE:${VL_INC_INSTALL_PATH}>
+      # VL_INC_INSTALL_PATH 定义于 VisionLibInstall.cmake 中
     )
     # 添加依赖
     target_link_libraries(
@@ -209,7 +240,7 @@ macro(vl_add_module _name)
     # 安装目标
     install(
       DIRECTORY include/visionlib
-      DESTINATION include/VisionLib
+      DESTINATION ${VL_INC_INSTALL_PATH}
     )
     install(
       TARGETS ${module_name}
@@ -348,7 +379,7 @@ vl_add_exe(demo
 
 @tab VisionLibConfig.cmake.in
 
-```cmake
+```cmake :collapsed-lines
 # ----------------------------------------------------------------------------
 #  VisionLib CMake 配置文件
 #
@@ -362,13 +393,17 @@ vl_add_exe(demo
 # ----------------------------------------------------------------------------
 #   获取 VisionLib 安装路径
 # ----------------------------------------------------------------------------
-get_filename_component(VL_CONFIG_PATH "${CMAKE_CURRENT_LIST_FILE}" PATH)
-get_filename_component(ML_INSTALL_PATH "${VL_CONFIG_PATH}/../../../" REALPATH)
+get_filename_component(VL_CONFIG_PATH
+  "${CMAKE_CURRENT_LIST_FILE}" PATH
+)
+get_filename_component(ML_INSTALL_PATH
+  "${VL_CONFIG_PATH}/@VL_INSTALL_RELATIVE_PATH@" REALPATH
+)
 
 # ----------------------------------------------------------------------------
 #   设置头文件搜索路径变量
 # ----------------------------------------------------------------------------
-set(VisionLib_INCLUDE_DIRS "${VL_INSTALL_PATH}/include/VisionLib")
+set(VisionLib_INCLUDE_DIRS "${VL_INSTALL_PATH}/@VL_INC_INSTALL_PATH@")
 
 # ----------------------------------------------------------------------------
 #   设置库文件路径变量
@@ -394,12 +429,400 @@ find_package_handle_standard_args(VisionLib
 
 ## 2. 外部依赖管理
 
-::: warning
-未完成...
+C/C++ 一个饱受诟病的话题就是包管理，一些现代的语言都具有比较完善的包管理工具，例如 Python 的 `pip`、Node.js 的 `npm` 和 `yarn`、Rust 的 `cargo` 等，而 C/C++ 由于平台原因，没有一个统一的包管理工具，导致了 C/C++ 项目的依赖管理非常困难。CMake 提供了 `FetchContent` 和 `ExternalProject` 模块，可以用于管理项目的外部依赖，相比于手动下载、编译、安装，`FetchContent` 和 `ExternalProject` 已经尽可能的简化了这个过程。
+
+`ExternalProject` 用于在构建过程中下载、配置、构建和安装外部项目。它通常用于处理大型的、独立的外部项目。而 `FetchContent` 用于在配置阶段下载和添加外部项目的源代码。它适用于需要将外部项目的源代码直接集成到主项目中的情况。后文将主要介绍 `FetchContent` 的使用，`ExternalProject` 的使用可以参考[官方文档](https://cmake.org/cmake/help/latest/module/ExternalProject.html)。
+
+### 2.1 `FetchContent`
+
+`FetchContent` 依赖管理定义于 `FetchContent` CMake 模块中，可使用
+
+```cmake
+include(FetchContent)
+```
+
+来引入。`FetchContent` 模块提供了 `FetchContent_Declare`、`FetchContent_MakeAvailable` 等函数，用于下载、解压、配置、编译、安装外部项目。
+
+#### 2.1.1 `FetchContent_Declare`
+
+<p align="right">—— 声明外部依赖项</p>
+
+```cmake
+FetchContent_Declare(
+  <name>
+  <contentOptions>...
+  [EXCLUDE_FROM_ALL]          # add in CMake 3.28
+  [SYSTEM]                    # add in CMake 3.25
+  [OVERRIDE_FIND_PACKAGE |
+   FIND_PACKAGE_ARGS args...] # add in CMake 3.24
+)
+```
+
+上述声明的可选项均不是很重要，重要的是 `<contentOptions>`。以下是使用 `FetchContent_Declare` 声明 `googletest` 项目的示例，提供了两种方式声明外部依赖项，一种是使用 Git 存储库作为外部依赖项，另一种是使用 URL 地址作为外部依赖项。
+
+::: code-tabs
+
+@tab 使用 Git 存储库
+
+```cmake
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG        703bd9caab50b139428cea1aaff9974ebee5742e # release-1.10.0
+)
+
+# GIT_REPOSITORY  表示外部依赖项的 Git 仓库地址；
+# GIT_TAG         表示外部依赖项的 Git 仓库的标签，可以是分支名、标签名、提交哈希等，
+#                 但建议是稳定的标签名防止不稳定的代码进入项目。
+```
+
+@tab 使用 URL 地址
+
+```cmake
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/main.zip
+)
+
+# URL             表示外部依赖项的 URL 地址。
+```
+
 :::
 
-## 3. 交叉编译与跨平台项目
+#### 2.1.2 `FetchContent_MakeAvailable`
 
-::: warning
-未完成...
+<p align="right">—— 使外部依赖项生效，并加入构建系统</p>
+
+```cmake
+FetchContent_MakeAvailable(<name1> [<name2>...])
+```
+
+该命令保证在调用结束后，每个命名的依赖项都可供项目使用。例如上文的 `googletest` 项目，可以使用以下方式使用：
+
+```cmake
+FetchContent_MakeAvailable(googletest)
+```
+
+如果有多个外部依赖项，可以使用以下方式使用：
+
+```cmake
+FetchContent_MakeAvailable(ext1 ext2 ext3)
+```
+
+该命令将依次配置 `ext1`、`ext2` 和 `ext3` 项目
+
+#### 2.1.3 `FetchContent` 示例
+
+来自[【复杂依赖】](https://cmake.org/cmake/help/latest/module/FetchContent.html#complex-dependency-hierarchies)
+
+```cmake
+include(FetchContent)
+FetchContent_Declare(
+  projB
+  GIT_REPOSITORY git@mycompany.com:git/projB.git
+  GIT_TAG        4a89dc7e24ff212a7b5167bef7ab079d
+)
+FetchContent_Declare(
+  projC
+  GIT_REPOSITORY git@mycompany.com:git/projC.git
+  GIT_TAG        4ad4016bd1d8d5412d135cf8ceea1bb9
+)
+FetchContent_Declare(
+  projD
+  GIT_REPOSITORY git@mycompany.com:git/projD.git
+  GIT_TAG        origin/integrationBranch
+)
+
+# Order is important, see notes in the discussion further below
+FetchContent_MakeAvailable(projD projB projC)
+```
+
+### 2.2 预期目标
+
+现计划开发一个 Windows 平台下的 OPC UA 通信库 `opcua`，该库依赖于 `open62541`，`open62541` 是一个开源的 OPC UA 协议栈，提供了 OPC UA 服务端和客户端的 C 语言实现。`opcua` 库的开发需要实现以下功能：
+
+1. 需要支持 C++17 标准；
+2. 强制依赖 `open62541`，没有该库需要自动下载、并添加至项目中，如果是自动下载的 `open62541`，那么 `opcua` 库在安装时需要将 `open62541` ==一并安装==；
+3. `open62541` 的配置要求如下
+   - ==无需==启用 `UA_ENABLE_AMALGAMATION` 选项；
+   - 其他选项默认即可；
+4. 默认以静态库的形式构建 `opcua`，但允许用户通过 CMake 选项设置构建为动态库；
+5. `opcua` 项目的安装目录为 `D:\opcua`，其中
+   - 头文件安装到 `D:\opcua\include`；
+   - 静态库、导入库文件安装到 `D:\opcua\x64\vc16\lib`；
+   - 动态库文件安装到 `D:\opcua\x64\vc16\bin`（如果构建为动态库）；
+   - CMake 相关配置文件安装到 `D:\opcua\x64\vc16\bin`；
+   - `open62541` 的安装要求由 `open62541Config.cmake` 指定了，具体安装路径不做详细说明，只需保证 `open62541` 的安装路径在 `D:\opcua` 下即可。
+
+### 2.3 文件结构
+
+该项目的文件结构如下，参考自 [rmvl_opcua 模块](https://github.com/cv-rmvl/rmvl/tree/2.x/modules/opcua)。
+
+``` :collapsed-lines
+.
+├── include
+│   ├── opcua
+│   │   ├── client.hpp
+│   │   ├── event.hpp
+│   │   ├── method.hpp
+│   │   ├── object.hpp
+│   │   ├── publisher.hpp
+│   │   ├── server.hpp
+│   │   ├── subscriber.hpp
+│   │   ├── utilities.hpp
+│   │   ├── variable.hpp
+│   │   └── view.hpp
+│   └── opcua.hpp
+└── src
+    ├── client.cpp
+    ├── cvt.hpp
+    ├── helper.cpp
+    ├── publisher.cpp
+    ├── server.cpp
+    └── subscriber.cpp
+
+6 directories, 19 files
+```
+
+### 2.4 实现
+
+在项目中添加
+
+- `3rdparty/open62541/CMakeLists.txt` —— `open62541` 的配置文件
+- `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
+- `cmake/opcuaInstall.cmake` —— 项目的安装路径配置文件
+
+共 3 个文件，如下文件结构所示
+
+```
+.
+├── 3rdparty
+│   └── open62541
+│       └── CMakeLists.txt (New)
+├── CMakeLists.txt         (New)
+├── cmake
+│   └── opcuaInstall.cmake (New)
+├── include
+│   └── ...
+└── src
+    └── ...
+```
+
+::: code-tabs
+
+@tab CMakeLists.txt
+
+```cmake :collapsed-lines
+cmake_minimum_required(VERSION 3.16)
+
+project(opcua)
+
+set(CMAKE_CXX_STANDARD 17)
+
+include(cmake/opcuaInstall.cmake)
+
+find_package(open62541 QUIET)
+if(NOT open62541_FOUND)
+  add_subdirectory(3rdparty/open62541/CMakeLists.txt)
+endif()
+
+aux_source_directory(src target_src)
+if(BUILD_SHARED_LIBS)
+  add_library(opcua SHARED ${target_src})
+else()
+  add_library(opcua STATIC ${target_src})
+endif()
+
+target_include_directories(opcua PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+
+target_link_libraries(opcua
+  PUBLIC open62541::open62541
+)
+
+install(
+  TARGETS opcua
+  LIBRARY DESTINATION ${OPCUA_BIN_INSTALL_PATH}
+  ARCHIVE DESTINATION ${OPCUA_LIB_INSTALL_PATH}
+  RUNTIME DESTINATION ${OPCUA_BIN_INSTALL_PATH}
+  INCLUDES DESTINATION ${OPCUA_INC_INSTALL_PATH}
+  EXPORT opcuaModules
+)
+```
+
+@tab cmake/opcuaInstall.cmake
+
+```cmake
+set(CMAKE_INSTALL_PREFIX "D:/opcua")
+set(OPCUA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
+set(OPCUA_INC_INSTALL_PATH "include")
+set(OPCUA_LIB_INSTALL_PATH "x64/vc16/lib")
+set(OPCUA_BIN_INSTALL_PATH "x64/vc16/bin")
+# 理论上这个路径要根据 MSVC 版本和系统架构来确定，这里只是举例，就不做额外判断了
+set(OPCUA_CFG_INSTALL_PATH "${OPCUA_LIB_INSTALL_PATH}")
+```
+
+@tab 3rdparty/open62541/CMakeLists.txt
+
+```cmake
+option(UA_ENABLE_AMALGAMATION "Enable amalgamation" OFF)
+
+FetchContent_Declare(
+  open62541
+  GIT_REPOSITORY https://github.com/open62541/open62541.git
+  GIT_TAG        v1.4.8
+)
+
+FetchContent_MakeAvailable(open62541)
+```
+
 :::
+
+## 3. 交叉编译项目
+
+CPU 有不同的架构、指令集，C/C++ 开发中的代码编译后的可执行文件，在不同的 CPU 上直接运行时可能会出现问题。对此有两种解决方案：
+
+- 在目标平台上直接编译代码，例如为了在 64 位 ARM 平台上运行代码，可以直接在 `aarch64` 平台上编译代码。但一般来说，ARM 平台常见于嵌入式设备，这类设备可能缺少编译工具链，在性能上也非常有限，因此这种方式并不适用于所有情况。
+- 直接在 PC 上编译目标平台的代码，然后将编译好的代码移植（复制粘贴）到目标平台上运行。这种方式称为==交叉编译==，在嵌入式 Linux 开发中非常常见，例如在 amd64 平台上编译 ARM 平台的代码。
+
+### 3.1 工具链文件的编写
+
+CMake 提供了强大的交叉编译支持，而且仅需一个==工具链文件==即可完成交叉编译的工作。工具链文件是一个 CMake 脚本，用于指定交叉编译的工具链，例如编译器、链接器、库文件路径等。工具链文件没有严格的命名规则，就如同普通的 `*.cmake` 文件一样，不过一般习惯上会在工具链文件的名字中提到平台或 `toolchain` 字样，在 CMake 配置过程中，使用 `-DCMAKE_TOOLCHAIN_FILE` 选项指定工具链文件，例如
+
+```shell
+cmake -DCMAKE_TOOLCHAIN_FILE=toolchain-aarch64.cmake ..
+```
+
+一般来说，工具链文件的内容如下：
+
+```cmake
+# 指定目标系统
+set(CMAKE_SYSTEM_NAME Linux)
+# 指定目标处理器架构
+set(CMAKE_SYSTEM_PROCESSOR aarch64)
+
+# 指定目标系统的根目录，将直接影响编译器和链接器的行为
+set(CMAKE_SYSROOT "/path/to/sysroot")
+
+# 指定 C 交叉编译器
+set(CMAKE_C_COMPILER "/path/to/arm-gcc")
+# 指定 C++ 交叉编译器
+set(CMAKE_CXX_COMPILER "/path/to/arm-g++")
+
+# 指定 CMake 查找文件的路径，例如 find_package
+set(CMAKE_FIND_ROOT_PATH "/path/to/sysroot")
+# 不查找程序
+set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
+# 只查找库
+set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+# 只查找头文件
+set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+```
+
+### 3.2 预期目标
+
+现计划开发一个 EtherCAT 协议的机械臂驱动程序 `ec_robot`，该程序需要在 aarch64 架构的 Linux 平台下运行，`ec_robot` 项目的开发需要实现以下功能：
+
+1. 需要使用指定的工具链进行交叉编译，目标系统根目录假设在 `/home/ecdev/buildroot/host/` 下
+   - C 交叉编译器为 `aarch64-linux-gnu-gcc`，位于目标系统根目录的 `/usr/bin` 目录下；
+   - C++ 交叉编译器为 `aarch64-linux-gnu-g++`，位于目标系统根目录的 `/usr/bin` 目录下；
+2. 需要支持 C++17 标准；
+3. 强制依赖 IgH 实现的 `EtherCAT` 主站驱动库，对应的配置文件在 `/home/ecdev/buildroot/host/usr/lib/cmake/ethercat` 下，对应的目标名为 `EtherLab::EtherCAT`；
+4. `ec_robot` 项目==无需==安装，只需构建即可。
+5. 没有复杂的文件结构，本项目只有一个 `src` 目录，内容如下：
+
+   ```
+   .
+   └── src
+       ├── ec_robot.cpp
+       └── main.cpp
+   ```
+
+### 3.3 分析
+
+- 需要实现一个工具链文件 `toolchain-aarch64.cmake`，用于指定交叉编译的工具链；
+- `EtherCATConfig.cmake` 文件在 `find_package` 的 Config 模式能够直接找到的位置吗，前提是工具链文件中的 `CMAKE_FIND_ROOT_PATH` 设置正确；
+- 项目除了工具链文件外，只需要一个 `CMakeLists.txt` 文件，并且构建方式和普通项目一样。
+
+### 3.4 实现
+
+在项目中添加
+
+- `platform/toolchain-aarch64.cmake` —— 交叉编译工具链文件
+- `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
+
+共 2 个文件，如下文件结构所示
+
+```
+.
+├── CMakeLists.txt              (New)
+├── src
+│   ├── ec_robot.cpp
+│   └── main.cpp
+└── platform
+    └── toolchain-aarch64.cmake (New)
+```
+
+::: code-tabs
+
+@tab CMakeLists.txt
+
+```cmake :collapsed-lines
+cmake_minimum_required(VERSION 3.16)
+
+project(ec_robot)
+
+set(CMAKE_CXX_STANDARD 17)
+
+find_package(EtherCAT REQUIRED)
+
+aux_source_directory(src target_src)
+add_executable(ec_robot ${target_src})
+
+target_link_libraries(ec_robot
+  PRIVATE EtherLab::EtherCAT
+)
+```
+
+@tab cmake/toolchain-aarch64.cmake
+
+```cmake
+set(CMAKE_SYSTEM_NAME Linux)
+set(CMAKE_SYSTEM_PROCESSOR aarch64)
+
+set(CMAKE_SYSROOT "/home/ecdev/buildroot/host")
+
+set(CMAKE_C_COMPILER "/home/ecdev/buildroot/host/usr/bin/aarch64-linux-gnu-gcc")
+set(CMAKE_CXX_COMPILER "/home/ecdev/buildroot/host/usr/bin/aarch64-linux-gnu-g++")
+
+set(CMAKE_FIND_ROOT_PATH "/home/ecdev/buildroot/host")
+set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
+set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+```
+
+:::
+
+不要惊讶为什么 `CMakeLists.txt` 中没有引用工具链文件，因为习惯上会在 CMake 执行配置生成过程时再指定工具链文件。
+
+打开项目根目录，在命令行中执行
+
+```shell
+mkdir build
+cmake -B build -S . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain-aarch64.cmake
+cmake --build build
+```
+
+即可完成编译。可能有部分读者没有见过 `-B` 和 `-S` 选项，这是 CMake 3.13 版本引入的[功能](https://cmake.org/cmake/help/latest/manual/cmake.1.html#options)。`-B` 选项用于指定构建目录，`-S` 选项用于指定源码目录，这样可以将构建目录和源码目录分开，避免在源码目录中生成构建文件。
+
+编译后的可执行文件在 `build` 目录下，可以直接复制到目标平台上运行，例如可以使用 SSH 工具的 `scp` 命令将文件复制到目标平台上，但要确保目标平台有 `libethercat.so` 的库文件，并且保证复制后的可执行文件能够找到。
+
+## 4. 跨平台项目
+
+### 4.1 预期目标
+
+### 4.2 分析
+
+### 4.3 实现
